Update styles and skills, add meta theme color

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,44 +1,56 @@
 <h1>Скиллы</h1>
 <div class="bootstrap-wrapper">
-    <div class="devicons-list row">
+    <div class="skills-list row">
         <div class="col-sm-6">
-            <h3>Дизайн</h3>
-            <i class="devicon devicon-photoshop-plain colored"></i>
-            <p>Использую Adobe InDesign для прототипирования проектов. Также на "ты" с Adobe Photoshop, Adobe Premiere, Adobe After Effects</p>
+            <div class="skill">
+                <h3>Дизайн</h3>
+                <i class="icon devicon-photoshop-plain colored"></i>
+                <p>Использую Adobe InDesign для прототипирования проектов. Также на "ты" с Adobe Photoshop, Adobe Premiere, Adobe After Effects</p>
+            </div>
         </div>
         <div class="col-sm-6">
-            <h3>Верстка</h3>
-            <i class="devicon devicon-html5-plain-wordmark"></i>
-            <i class="devicon devicon-sass-original colored"></i>
-            <i class="devicon devicon-bootstrap-plain-wordmark colored"></i>
-            <p>Предпочитаю использовать SCSS для стилей и Pug шаблонизатор для HTML. Использую инструменты CSSComb и Stylelint для единого стиля</p>
+            <div class="skill">
+                <h3>Верстка</h3>
+                <i class="icon devicon-html5-plain-wordmark colored"></i>
+                <i class="icon devicon-sass-original colored"></i>
+                <i class="icon devicon-bootstrap-plain-wordmark colored"></i>
+                <p>Предпочитаю использовать SCSS для стилей и Pug шаблонизатор для HTML. Использую инструменты CSSComb и Stylelint для единого стиля</p>
+            </div>
         </div>
         <div class="col-sm-6">
-            <h3>Backend</h3>
-            <i class="devicon devicon-php-plain colored"></i>
-            <i class="devicon devicon-wordpress-plain colored"></i>
-            <p>Есть большой опыт работы с CMS Wordpress</p>
+            <div class="skill">
+                <h3>Backend</h3>
+                <i class="icon devicon-php-plain colored"></i>
+                <i class="icon devicon-wordpress-plain colored"></i>
+                <p>Есть большой опыт работы с CMS Wordpress</p>
+            </div>
         </div>
         <div class="col-sm-6">
-            <h3>Frontend</h3>
-            <i class="devicon devicon-javascript-plain colored"></i>
-            <i class="devicon devicon-vuejs-plain colored"></i>
-            <i class="devicon devicon-react-original colored"></i>
-            <i class="devicon devicon-bower-plain-wordmark colored"></i>
-            <i class="devicon devicon-jquery-plain-wordmark colored"></i>            
-            <i class="devicon devicon-webpack-plain colored"></i>
-            <p>Из всех JS фреймворков предпочитаю работать с Vue.js. Для единого стиля использую линтеры (для JS использую конфиг airbnb)</p>
+            <div class="skill">
+                <h3>Frontend</h3>
+                <i class="icon devicon-javascript-plain colored"></i>
+                <i class="icon devicon-vuejs-plain colored"></i>
+                <i class="icon devicon-react-original colored"></i>
+                <i class="icon devicon-bower-plain-wordmark colored"></i>
+                <i class="icon devicon-jquery-plain-wordmark colored"></i>
+                <i class="icon devicon-webpack-plain colored"></i>
+                <p>Из всех JS фреймворков предпочитаю работать с Vue.js. Для единого стиля использую линтеры (для JS использую конфиг airbnb)</p>
+            </div>
         </div>
         <div class="col-sm-6">
-            <h3>Сборка проекта</h3>
-            <i class="devicon devicon-gulp-plain colored"></i>
-            <p>Для сборки проектов предпочитаю gulp</p>
+            <div class="skill">
+                <h3>Сборка проекта</h3>
+                <i class="icon devicon-gulp-plain colored"></i>
+                <p>Для сборки проектов предпочитаю gulp</p>
+            </div>
         </div>
         <div class="col-sm-6">
-            <h3>Workflow</h3>
-            <i class="devicon devicon-git-plain-wordmark colored"></i>
-            <i class="devicon devicon-phpstorm-plain colored"></i>
-            <i class="devicon devicon-ubuntu-plain colored"></i>
-            <p>Для кодинга использую SublimeText, PHPStorm - для чего-то более серьезного. Код храню на bitbucket или github. Чувствую себя комфортно и в Windows, и в Linux</p>
+            <div class="skill">
+                <h3>Рабочее окружение</h3>
+                <i class="icon devicon-git-plain-wordmark colored"></i>
+                <i class="icon devicon-phpstorm-plain colored"></i>
+                <i class="icon devicon-ubuntu-plain colored"></i>
+                <p>Для кодинга использую SublimeText, PHPStorm - для чего-то более серьезного. Код храню на bitbucket или github. Чувствую себя комфортно и в Windows, и в Linux</p>
+            </div>
         </div>
     </div>
