--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,15 +10,15 @@
 
 
 @import 'UI/button';
-
+@import 'UI/icon';
 
 @import 'partials/header';
 @import 'partials/footer';
 
-
+@import 'partials/particles-js';
 @import 'partials/about';
 @import 'partials/experience';
 @import 'partials/skills';
 @import 'partials/form';
 
-@import 'partials/projects';
+//@import 'partials/projects';
