--- a/src/styles/partials/_skills.scss
+++ b/src/styles/partials/_skills.scss
@@ -1,6 +1,6 @@
 #skills
 {
-    .devicons-list
+    .skills-list
     {
         h3
         {
@@ -10,7 +10,7 @@
                 text-align: left;
             }
         }
-        .devicon
+        .icon
         {
             font-size: 75px;
 
