--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -7,10 +7,10 @@ $grey: #eee;
 $grey-light: #f9f9f9;
 
 //Used Colors
-$main: $blue;
-$sec: lighten($main, 10);
-$accent: $red;
-$accent2: $yellow;
+$main-color: $blue;
+$sec-color: lighten($main-color, 10);
+$accent-color: $red;
+$accent-color2: $yellow;
 $default-color: $grey;
 $default-color--lighten: $grey-light;
 
@@ -21,33 +21,58 @@ $body__font-color: #555;
 $cut: 550px;
 
 //Links
-$link__font-color--hover: $sec;
-$link__font-color--active: $accent;
+$link__font-color--hover: $sec-color;
+$link__font-color--active: $accent-color;
 
 //Button
-$button__background-color: $main;
+$button__background-color: $main-color;
 $button__font-color: #FFF;
 $button__border: none;
 $button__padding: 10px 20px;  
 $button__border-radius: 50px;
 
-$button--background-color--hover: $accent;
+$button--background-color--hover: $accent-color;
 $button__font-color--hover: #FFF;
 
-$button--background-color--active: $accent;
+$button--background-color--active: $accent-color;
 $button__font-color--active: #FFF;
+
+//Icons
+$icon__font-color: $main-color;
+$icon__font-color--hover: $accent-color2;
+$icon__font-color--active: $accent-color;
 
 //Header
 $header__button-primary-primary__background-color: $button__background-color;
 $header__button-primary__font-color: #FFF;
 $header__button-primary__padding: 10px 20px 12px; 
-$header__button-primary__background-color--hover: $accent;
-$header__button-primary__background-color--active: $accent;
+$header__button-primary__background-color--hover: $accent-color;
+$header__button-primary__background-color--active: $accent-color;
 
 $header__down-arrow__font-color: #FFF;
+$header__down-arrow__fill: #FFF;
 $header__down-arrow__icon__height: 50px;
 $header__down-arrow__icon__width: 100px;
 
+$header__down-arrow__font-color--hover: #FFF;
+$header__down-arrow__font-color--active: $sec-color;
+
+$header__icon__font-color: #FFF;
+$header__icon__font-color--hover: $main-color;
+$header__icon__font-color--active: $accent-color2;
+
+//Footer
+$footer__background-color: $main-color;
+$footer__font-color: #FFF;
+$footer__margin: 100px 0 0 0;
+$footer__padding: 30px;
+
+$footer__icon__font-color: #FFF;
+$footer__icon__font-size: 25px;
+$footer__icon__margin-right: 15px;
+
+$footer__icon__font-color--hover: $accent-color2;
+$footer__icon__font-color--active: $accent-color;
 
 //Form
 $form__margin: 0 auto;
@@ -66,30 +91,20 @@ $form__submit__margin: 10px 0;
 $form__hint__font-size: 14px;
 $form__hint__opacity: .8;
 
-$form__el__border-bottom--focus: 2px solid $accent2;
+$form__el__border-bottom--focus: 2px solid $accent-color2;
 $form__el__border-radius--focus: 5px;
 $form__el__padding--focus: 15px 10px;
 
 //Timeline
 $timeline__line-color: $default-color;
-$timeline__point-color: $main;
+$timeline__point-color: $main-color;
 $timeline__li__h2__font-size: 24px;
 $timeline__li__h3__font-size: 20px;
 $timeline__li__h2__point-border-width: 3px;
 
-$timeline__li__h2__font-color--hover: $accent;
+$timeline__li__h2__font-color--hover: $accent-color;
 $timeline__li__h2__point-color--hover: $timeline__li__h2__font-color--hover;
 $timeline__li__h2__point-border-width--hover: 4px;
 
-//Footer
-$footer__background-color: $main;
-$footer__font-color: #FFF;
-$footer__margin: 100px 0 0 0;
-$footer__padding: 30px;
-
-$footer__icon__font-color: #FFF;
-$footer__icon__font-size: 25px;
-$footer__icon__margin-right: 15px;
-
-$footer__icon__font-color--hover: $accent2;
-$footer__icon__font-color--active: $accent;
+//Particles-js
+$particles-js__background-color: $main-color;
