--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -1,25 +1,4 @@
-#particles-js
-{
-    display: flex;
-
-    width: 100%;
-    min-height: 100vh;
-
-    vertical-align: bottom;
-
-    background: $main;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    .particles-js-canvas-el
-    {
-        width: 100% !important;
-        height: 100vh !important;
-    }
-}
-
-.header
-{
+.header {
     position: absolute;
     z-index: 1;
     top: 50%;
@@ -28,32 +7,32 @@
     margin: 0 auto;
 
     -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 
     color: #fff;
-    h1
-    {
+
+    h1 {
         margin-top: 0;
         padding-top: 0;
     }
-    .site-title
-    {
+
+    .site-title {
         font-size: 50px;
         line-height: 1;
 
         display: block;
 
         color: #fff;
-        @media only screen and (min-width:$cut)
-        {
+
+        @media only screen and (min-width: $cut) {
             font-size: 50px;
 
             margin: 0;
         }
     }
-    .site-description
-    {
+
+    .site-description {
         font-size: 20px;
         font-weight: 100;
         line-height: 1;
@@ -64,18 +43,16 @@
 
         color: #fff;
 
-        @media only screen and (min-width:$cut)
-        {
+        @media only screen and (min-width: $cut) {
             font-size: 30px;
         }
     }
 }
 
-.header-links
-{
+.header-links {
     margin: 30px 10px;
-    .link
-    {
+
+    .link {
         font-size: 15px;
 
         margin: 10px;
@@ -83,15 +60,14 @@
         text-decoration: none;
 
         color: #fff;
-        @media only screen and (min-width:$cut)
-        {
+
+        @media only screen and (min-width: $cut) {
             font-size: 20px;
         }
     }
 }
 
-.header-icons
-{
+.header-icons {
     display: flex;
 
     box-sizing: content-box;
@@ -99,8 +75,8 @@
     text-align: center;
 
     justify-content: center;
-    .icon
-    {
+
+    .icon {
         font-size: 20px;
 
         width: 20px;
@@ -111,21 +87,22 @@
         transition: all 300ms;
         text-align: center;
 
+        color: $header__icon__font-color;
         color: #fff;
         border: 2px solid #fff;
         border-radius: 50%;
-        &:hover
-        {
-            color: $main;
+
+        &:hover {
+            color: $header__icon__font-color--hover;
             background: #fff;
         }
-        &:active
-        {
-            color: $accent;
+
+        &:active {
+            color: $header__icon__font-color--active;
             background: #fff;
         }
-        @media only screen and (min-width:$cut)
-        {
+
+        @media only screen and (min-width:$cut) {
             font-size: 30px;
 
             width: 30px;
@@ -134,8 +111,7 @@
     }
 }
 
-.down
-{
+.down {
     font-size: 30px;
 
     position: absolute;
@@ -150,8 +126,8 @@
     text-align: center;
 
     color: $header__down-arrow__font-color;
-    .icon
-    {
+
+    .icon {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -160,23 +136,21 @@
         height: $header__down-arrow__icon__height;
 
         -webkit-transform: translate(-50%, -50%);
-                transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
         -webkit-animation: pulse 1.3s infinite;
-                animation: pulse 1.3s infinite;
+        animation: pulse 1.3s infinite;
 
         -webkit-transform-style: preserve-3d;
-                transform-style: preserve-3d;
-        fill: #fff;
+        transform-style: preserve-3d;
+        fill: $header__down-arrow__fill;
 
-        &:hover
-        {
-            color: #fff;
+        &:hover {
+            color: $header__down-arrow__font-color--hover;
         }
 
-        &:active
-        {
+        &:active {
             opacity: 1;
-            color: $sec;
+            color: $header__down-arrow__font-color--active;
         }
     }
 }
