Update header down icon styles

--- a/src/styles/core/_vars.scss
+++ b/src/styles/core/_vars.scss
@@ -55,7 +55,7 @@ $header__down-arrow__icon__height: 50px;
 $header__down-arrow__icon__width: 100px;
 
 $header__down-arrow__font-color--hover: #FFF;
-$header__down-arrow__font-color--active: $sec-color;
+$header__down-arrow__font-color--active: $accent-color2;
 
 $header__icon__font-color: #FFF;
 $header__icon__font-color--hover: $main-color;
