Update html tags and some styles - experience, skills, vars

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,25 +1,21 @@
-<h1>Опыт</h1>
+<h2>Опыт</h2>
 <div class="bootstrap-wrapper">
     <div class="container">
-        <div class="row">
-            <div class="">
-                <ul class="timeline">
-                    <li>
-                        <h2>КГУ, филиал в г. Зеленодольск</h2>
-                        <h3>2010 — 2012</h3>
-                        <p><span>Должность : </span>старший лаборант отделения прикладной математики</p>
-                    		<p><span>Проект : </span>Сайт филиала на ASP</p>
-                    		<p><span>Обязанности : </span>Поддержка сайта филиала</p>
-                    </li>
-                    <li>
-                        <h2>ICL—КПО ВС</h2>
-                        <h3>2014 — настоящее время</h3>
-                        <p><span>Должность : </span>WEB-разработчик</p>
-                    		<p><span>Проект : </span>Внутренний портал ICL </p>
-                    		<p><span>Обязанности : </span>Разработка - от проектирования и дизайна портала до реализации на backend и frontend (Fullstack). Поддержка портала.</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        <ul class="timeline-list">
+            <li class="timeline-list-item">
+                <h3 class="timeline-list-item__title">КГУ, филиал в г. Зеленодольск</h3>
+                <h4 class="timeline-list-item__lasting">2010 — 2012</h4>
+                <p><span>Должность : </span>старший лаборант отделения прикладной математики</p>
+                <p><span>Проект : </span>Сайт филиала на ASP</p>
+                <p><span>Обязанности : </span>Поддержка сайта филиала</p>
+            </li>
+            <li class="timeline-list-item">
+                <h3 class="timeline-list-item__title">ICL—КПО ВС</h3>
+                <h4 class="timeline-list-item__lasting">2014 — настоящее время</h4>
+                <p><span>Должность : </span>WEB-разработчик</p>
+                <p><span>Проект : </span>Внутренний портал ICL </p>
+                <p><span>Обязанности : </span>Разработка - от проектирования и дизайна портала до реализации на backend и frontend (Fullstack). Поддержка портала.</p>
+            </li>
+        </ul>
     </div>
 </div>
