--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,16 +1,16 @@
-<h1>Скиллы</h1>
+<h2>Скиллы</h2>
 <div class="bootstrap-wrapper">
     <div class="skills-list row">
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Дизайн</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Дизайн</h3>
                 <i class="icon devicon-photoshop-plain colored"></i>
                 <p>Использую Adobe InDesign для прототипирования проектов. Также на "ты" с Adobe Photoshop, Adobe Premiere, Adobe After Effects</p>
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Верстка</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Верстка</h3>
                 <i class="icon devicon-html5-plain-wordmark colored"></i>
                 <i class="icon devicon-sass-original colored"></i>
                 <i class="icon devicon-bootstrap-plain-wordmark colored"></i>
@@ -18,16 +18,16 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Backend</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Backend</h3>
                 <i class="icon devicon-php-plain colored"></i>
                 <i class="icon devicon-wordpress-plain colored"></i>
                 <p>Есть большой опыт работы с CMS Wordpress</p>
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Frontend</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Frontend</h3>
                 <i class="icon devicon-javascript-plain colored"></i>
                 <i class="icon devicon-vuejs-plain colored"></i>
                 <i class="icon devicon-react-original colored"></i>
@@ -38,15 +38,15 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Сборка проекта</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Сборка проекта</h3>
                 <i class="icon devicon-gulp-plain colored"></i>
                 <p>Для сборки проектов предпочитаю gulp</p>
             </div>
         </div>
         <div class="col-sm-6">
-            <div class="skill">
-                <h3>Рабочее окружение</h3>
+            <div class="skills-list-item">
+                <h3 class="skills-list-item__title">Рабочее окружение</h3>
                 <i class="icon devicon-git-plain-wordmark colored"></i>
                 <i class="icon devicon-phpstorm-plain colored"></i>
                 <i class="icon devicon-ubuntu-plain colored"></i>
