--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,52 +4,64 @@
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Дизайн</h3>
-                <i class="icon devicon-photoshop-plain colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-photoshop-plain colored"></i>
+                </div>
                 <p>Использую Adobe InDesign для прототипирования проектов. Также на "ты" с Adobe Photoshop, Adobe Premiere, Adobe After Effects</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Верстка</h3>
-                <i class="icon devicon-html5-plain-wordmark colored"></i>
-                <i class="icon devicon-sass-original colored"></i>
-                <i class="icon devicon-bootstrap-plain-wordmark colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-html5-plain-wordmark colored"></i>
+                    <i class="icon devicon-sass-original colored"></i>
+                    <i class="icon devicon-bootstrap-plain-wordmark colored"></i>
+                </div>
                 <p>Предпочитаю использовать SCSS для стилей и Pug шаблонизатор для HTML. Использую инструменты CSSComb и Stylelint для единого стиля</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Backend</h3>
-                <i class="icon devicon-php-plain colored"></i>
-                <i class="icon devicon-wordpress-plain colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-php-plain colored"></i>
+                    <i class="icon devicon-wordpress-plain colored"></i>
+                </div>
                 <p>Есть большой опыт работы с CMS Wordpress</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Frontend</h3>
-                <i class="icon devicon-javascript-plain colored"></i>
-                <i class="icon devicon-vuejs-plain colored"></i>
-                <i class="icon devicon-react-original colored"></i>
-                <i class="icon devicon-bower-plain-wordmark colored"></i>
-                <i class="icon devicon-jquery-plain-wordmark colored"></i>
-                <i class="icon devicon-webpack-plain colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-javascript-plain colored"></i>
+                    <i class="icon devicon-vuejs-plain colored"></i>
+                    <i class="icon devicon-react-original colored"></i>
+                    <i class="icon devicon-bower-plain-wordmark colored"></i>
+                    <i class="icon devicon-jquery-plain-wordmark colored"></i>
+                    <i class="icon devicon-webpack-plain colored"></i>
+                </div>
                 <p>Из всех JS фреймворков предпочитаю работать с Vue.js. Для единого стиля использую линтеры (для JS использую конфиг airbnb)</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Сборка проекта</h3>
-                <i class="icon devicon-gulp-plain colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-gulp-plain colored"></i>
+                </div>
                 <p>Для сборки проектов предпочитаю gulp</p>
             </div>
         </div>
         <div class="col-sm-6">
             <div class="skills-list-item">
                 <h3 class="skills-list-item__title">Рабочее окружение</h3>
-                <i class="icon devicon-git-plain-wordmark colored"></i>
-                <i class="icon devicon-phpstorm-plain colored"></i>
-                <i class="icon devicon-ubuntu-plain colored"></i>
+                <div class="skills-list-item__icons">
+                    <i class="icon devicon-git-plain-wordmark colored"></i>
+                    <i class="icon devicon-phpstorm-plain colored"></i>
+                    <i class="icon devicon-ubuntu-plain colored"></i>
+                </div>
                 <p>Для кодинга использую SublimeText, PHPStorm - для чего-то более серьезного. Код храню на bitbucket или github. Чувствую себя комфортно и в Windows, и в Linux</p>
             </div>
         </div>
